--- a/2a-exercises/package.json
+++ b/2a-exercises/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "0",
+  "name": "2a-exercises",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,7 +9,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.19.0",
     "express": "^4.17.1"
   }
 }
